--- a/photo-frontend/src/index.html
+++ b/photo-frontend/src/index.html
@@ -23,14 +23,16 @@
     <app>Loading...</app>
 </body>
 <!-- Bootstrap core JavaScript -->
-<script src="https://blackrockdigital.github.io/startbootstrap-agency/vendor/jquery/jquery.min.js"></script>
-<script src="https://blackrockdigital.github.io/startbootstrap-agency/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/vendor/jquery/jquery.min.js"></script>
+<script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="https://blackrockdigital.github.io/startbootstrap-agency/vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="./assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-
+<!-- Contact form JavaScript -->
+<script src="./assets/js/jqBootstrapValidation.js"></script>
+<script src="./assets/js/contact_me.js"></script>
 
 <!-- Custom scripts for this template -->
-<script src="https://blackrockdigital.github.io/startbootstrap-agency/js/agency.min.js"></script>
+<script src="./assets/js/agency.min.js"></script>
 </html>
